# polyfactory-speed

./: pyproject.toml
polyfactory_speed/: __init__.py
tests/: test_mimesis.py  test_polyfactory.py
