[project]
name = "polyfactory-speed"
version = "0.1.0"
description = "Showcasing polyfactory speed"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pytest",
  "polyfactory",
  "mimesis",
  "pydantic[email]",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
